--- a/index.html
+++ b/index.html
@@ -24,36 +24,81 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-      <img class="mg" src="image.png" />
-      <p class="text">CLICK</p>
+    <nav class="navbar navbar-light" style="background-color: black;">
+      <img class="mg" src="images/image.png" />
+      <p class="text">Click</p>
       <ul class="menu">
         <li><a href="#">INICIO</a></li>
         <li><a href="#">SOBRE</a></li>
-        <li>
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-            >TRABALHOS</a
-          >
-          <ul>
-            <li><a href="#">ENSAIOS</a></li>
-            <li><a href="#">EXPOSIÇÃO</a></li>
-            <li><a href="#">IFANTIL</a></li>
-            <li><a href="#">NATUREZA</a></li>
-          </ul>
-        </li>
+        <li><a href="#">TRABALHOS</a></li>
         <li><a href="#">CONTATO</a></li>
       </ul>
     </nav>
+    <section class="galeria">
+      <img class="foto" src="images/casamento.png" />
+      <img class="foto" src="images/luz.jpg" />
+      <img class="foto" src="images/lentes.jpg" />
+    </section>
+    <div class="container">
+      <p class="paragrafh">TRABALHOS RECENTES</p>
+    </div>
+    <div class="w3-row-padding w3-margin-top">
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="images/banner.png" style="width: 100%;" />
+          <div class="w3-container">
+            <h5>Happy New Year</h5>
+          </div>
+        </div>
+      </div>
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="images/festa.png" style="width: 100%;" />
+          <div class="w3-container">
+            <h5>Party</h5>
+          </div>
+        </div>
+      </div>
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="images/lens12.jpg" style="width: 100%;" />
+          <div class="w3-container">
+            <h5>Nuture</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="w3-row-padding w3-margin-top">
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="images/summer.jpg" style="width: 100%;" />
+          <div class="w3-container">
+            <h5>Sunrise</h5>
+          </div>
+        </div>
+      </div>
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="images/woman.jpg" style="width: 100%;" />
+          <div class="w3-container">
+            <h5>Sunset</h5>
+          </div>
+        </div>
+      </div>
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="images/womanphoto.jpg" style="width: 100%;" />
+          <div class="w3-container">
+            <h5>Photografy is Love</h5>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <footer class="foo"></footer>
 </html>
